@startuml ClassDiagram_Sprint3_ViewsAndFlow
title Sprint 3 — Pause & Reflect (Views + Flow Controller)
hide circles

left to right direction

<style>
classDiagram {
  nodeSep 60
  rankSep 80
}

class {
  BackGroundColor #FFF8E1
  LineColor #555555
}

arrow {
  LineColor #333333
}

package {
  Style rectangle
}

element {
  Shadowing 0
  Padding 4
}
</style>

hide empty members

package "Views (SwiftUI)" #FFF1D6 {
  class "MainTabView\n(V)"                  as MainTab
  class "PreSpendInterventionSheet\n(V)"    as PRSheet
  class "PauseReflectInputView\n(V)"        as InputView
  class "PauseReflectDecisionView\n(V)"     as DecisionView
  class "WaitConfirmedView\n(V)"            as WaitView
  class "PotCreatedView\n(V)"               as PotView
}

package "Flow controller" #FFEFCB {
  class "PreSpendInterventionFlow\n(C — @Observable)" as Flow {
    + amountText : String
    + itemDescription : String
    + category : TransactionCategory
    + step : PreSpendInterventionStep
    + decision : InterventionDecision?
    --
    + submitInput() async
    + start() async
    + chooseBuyNow() async
    + chooseWait(_ duration) async
    + chooseAddToPot() async
    + chooseSkip() async
  }
}

package "Step enum" #FFEFCB {
  enum "PreSpendInterventionStep" as Step {
    input
    decision
    waitConfirmed
    potCreated
    dismissed
  }
}

' --- Containment: sheet hosts the four step views ---
PRSheet *-- InputView    : hosts
PRSheet *-- DecisionView : hosts
PRSheet *-- WaitView     : hosts
PRSheet *-- PotView      : hosts

' --- View ↔ flow ---
PRSheet      --> Flow : observes
MainTab ..> Flow : creates on banner tap
Flow         --> Step : current step

note bottom of Flow
  Step transitions:
    .input → submitInput() → .decision
    .decision → chooseWait()  → .waitConfirmed
    .decision → chooseAddToPot() → .potCreated
    .decision → chooseBuyNow()/chooseSkip() → .dismissed
  "Skip" is only enabled when the flow was
  opened from a wait-reminder tap (re-decision).
end note

@enduml